force-app/main/default/objects/Domiciliation__c/Domiciliation__c.object-meta.xml
<CustomObject>
    <label>Domiciliation</label>
    <nameField>
        <label>Domiciliation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Domiciliations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>