force-app/main/default/objects/Domiciliation__c/fields/Ancien_BIC__c.field-meta.xml
<CustomField>
    <fullName>Ancien_BIC__c</fullName>
    <label>Ancien BIC</label>
    <length>15</length>
    <type>Text</type>
</CustomField>