force-app/main/default/objects/Domiciliation__c/fields/Ancien_IBAN__c.field-meta.xml
<CustomField>
    <fullName>Ancien_IBAN__c</fullName>
    <label>Ancien IBAN</label>
    <length>35</length>
    <type>Text</type>
</CustomField>