force-app/main/default/objects/Domiciliation__c/fields/Import_de_Domiciliations__c.field-meta.xml
<CustomField>
    <fullName>Import_de_Domiciliations__c</fullName>
    <label>Import de Domiciliations</label>
    <referenceTo>Import_de_Domiciliation__c</referenceTo>
    <relationshipLabel>Domiciliations</relationshipLabel>
    <relationshipName>Domiciliations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>