force-app/main/default/objects/Domiciliation__c/fields/MandatID__c.field-meta.xml
<CustomField>
    <fullName>MandatID__c</fullName>
    <label>MandatID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>