force-app/main/default/objects/Domiciliation__c/fields/Nouveau_BIC__c.field-meta.xml
<CustomField>
    <fullName>Nouveau_BIC__c</fullName>
    <label>Nouveau BIC</label>
    <length>15</length>
    <type>Text</type>
</CustomField>