force-app/main/default/objects/Domiciliation__c/fields/Nouvel_IBAN__c.field-meta.xml
<CustomField>
    <fullName>Nouvel_IBAN__c</fullName>
    <label>Nouvel IBAN</label>
    <length>35</length>
    <type>Text</type>
</CustomField>